# MySVG

./: .gitignore  LICENSE  README.md
bindings/Renderer/: MySVG_Blend2d_Impl.cpp  MySVG_Blend2d_Impl.h
bindings/Xml/: MySVG_RapidXml_Impl.h
examples/blend2d-example/: CMakeLists.txt  Source.cpp
include/MySVG/: Document.h  Elements.h  MySVG.h  Parser.cpp  Parser.h  Rapidxml.h  Style.h  Transform.h
